# lyricdisplay-ndi

./: .gitattributes  .gitignore  README.md  build.js  package-lock.json  package.json
.github/workflows/: release-native.yml  release.yml
native/: Cargo.toml  README.md
native/src/: main.rs  state.rs
native/src/ipc/: message.rs  server.rs
native/src/media/: mod.rs
native/src/ndi/: mod.rs  native_sender.rs
native/src/render/: mod.rs
native/src/scene/: mod.rs
native/src/telemetry/: mod.rs
public/: favicon.icns
scripts/: release.js  write-checksums.js
src/: browser.js  capture.js  cli.js  index.js  ipc.js  ipcProtocol.js  main.js  ndi.js  ndiSender.js  outputManager.js  settings.js  userData.js
tests/: cli.test.js  ipc-protocol.test.js
