[package]
name = "lyricdisplay-ndi-native"
version = "0.1.0"
edition = "2021"
description = "Native companion scaffold for LyricDisplay NDI output"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
font8x8 = "0.3"
libloading = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "time", "signal"] }
